--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
-			<div class="navbar-collapse offcanvas-collapse">
+			<!-- <div class="navbar-collapse offcanvas-collapse">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 					</li>
 				</ul>
-			</div>
+			</div> -->
 		</div>
 	</nav>
 
@@ -131,10 +131,28 @@
 
 		function bank(name) {
 			var xhr = new XMLHttpRequest();
+			var bim = "http://benchambule.ml/bankin/bankin.php?service=xr&bank=bim",
+				bci = "http://benchambule.ml/bankin/bankin.php?service=xr&bank=bci",
+				unico = "http://benchambule.ml/bankin/bankin.php?service=xr&bank=unico",
+				standard = "http://benchambule.ml/bankin/bankin.php?service=xr&bank=standard",
+				url = "";
+
+			if(name == "bim"){
+				url = bim;
+			}
+			else if (name == "bci"){
+				url = bci;
+			}
+			else if (name == "standard"){
+				url = standard;
+			}
+			else if (name == "unico"){
+				url = unico;
+			}
+
 			xhr.open("GET", "./dist/json/"+name);
 
 			xhr.addEventListener("load", function () {
-				var erros = [];
 				if (xhr.status == 200) {
 					var result = xhr.responseText;
 					var data = JSON.parse(result);
