--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
 			</div>
 		</div>
 	</main>
-	<script type="text/javascript"></script>
+	<script src="dist/js/bundle.js"></script>
 </body>
 </html>
