--- a/index.html
+++ b/index.html
@@ -4,25 +4,17 @@
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Taxa(s) de Cambio</title>
+	<title>Dambo || </title>
 
 	<link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
 		<div class="container">
-			<a class="navbar-brand mr-auto mr-lg-0" href="#">Currency in Moz</a>
+			<a class="navbar-brand mr-auto mr-lg-0" href="#">Dambo</a>
 			<button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-
-			<!-- <div class="navbar-collapse offcanvas-collapse">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-					</li>
-				</ul>
-			</div> -->
 		</div>
 	</nav>
 
